Fix long error message on mobile

--- a/style.css
+++ b/style.css
@@ -56,15 +56,20 @@ main {
 }
 
 .signup__control {
-  margin-bottom: 1.125rem;
-  padding-bottom: 1.25rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1.15rem;
   position: relative;
 }
 
+.signup__control:nth-of-type(4) {
+  padding-bottom: 2.25rem;
+}
+
 .signup__input {
-  padding: 0.85em 1.75em;
+  padding: 0.75rem 1.75rem;
   border-radius: 5px;
   border: 1px solid hsl(246, 25%, 77%);
+  display: block;
   font-family: inherit;
   font-weight: 600;
   color: hsl(249, 10%, 26%);
@@ -184,6 +189,10 @@ footer a {
 
   .signup__form {
     padding: 2.5em;
+  }
+
+  .signup__control:nth-of-type(4) {
+    padding-bottom: 1.25rem;
   }
 
   .signup__input {
